selected filters and day picker css fix

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jack Finch <jack.finch@semanticbits.com>",
   "scripts": {
     "dev:css": "stylus -w ./src/css/app.styl -o ./src/css/build/app.css -I ./node-modules/nib",
-    "dev:site": "gatsby develop -H 127.0.0.1 -p 3000",
+    "dev:site": "gatsby develop -H 127.0.0.1 -p 3000 --verbose",
     "build": "gatsby build --verbose",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'"
   },
