--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rc-slider": "8.3.1",
     "react-autosuggest": "^9.3.2",
     "react-chartjs": "^0.8.0",
+    "react-collapsible": "^2.0.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-day-picker": "^7.1.1",
