--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "html-react-parser": "0.4.0",
     "immutability-helper": "^2.5.0",
     "jquery": "^3.2.1",
-    "json2csv": "4.0.0-alpha.0",
+    "jsonexport": "^2.0.11",
     "loader-utils": "1.0.2",
     "localforage": "^1.5.2",
     "marked": "^0.3.6",
